[package]
name = "earthly-network-kafka-repro"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", default_features = false, features = ["std", "clock", "serde"] }
clap = "2.18.0"
env_logger = "0.9.0"
hdrhistogram = "7.0.0"
log = "0.4.8"
rdkafka = "0.29.0"
tokio = { version = "1.26.0", features = ["macros", "full"] }
